<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/linksFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_links" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@id/settingsFragment"
                android:checkable="true"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@id/aboutFragment"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
